# itmo-mlops-2025

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  docker-compose.yaml  dvc.yaml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/core/: index.html
data/: raw.dvc
development/contributing/: index.html
development/workflow/: index.html
docs/: getting-started.md  index.md
docs/api/: core.md
docs/data-version-control/: overview.md  workflow.md
docs/development/: contributing.md  workflow.md
docs/ml-pipeline/: data-processing.md  model-evaluation.md  model-training.md
docs/model-comparison/: .gitignore
getting-started/: index.html
metrics/: house_metrics.json  titanic_metrics.json
models/trained/: .gitignore
search/: search_index.json
src/: README.md  contributing.md  mkdocs.yml  test.py
src/homeworks/: index.md
src/mlops/: __init__.py  core.py
src/mlops/data/: process_house.py  process_titanic.py
src/mlops/evaluation/: compare_models.py
src/mlops/models/: train_house.py  train_titanic.py
tests/: test_core.py
