[tool.poetry]
name = "MLOps-ods3.0"
version = "0.1.0"
description = "Homeworks for the MLOps ODS 3.0 course"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
