[tool.poetry]
name = "itmo-mlops-2025"
version = "0.1.0"
description = "Homeworks for the MLOps course"
authors = ["Your Name <egorovmichil9@gmail.com>"]
license = "MIT"
packages = [
    { include = "mlops", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.3.0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.6"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]
