[tool.poetry]
name = "itmo-mlops-2025"
version = "0.1.0"
description = "Homeworks for the MLOps course"
authors = ["Michil Egorov <egorovmichil9@gmail.com>"]
license = "MIT"
packages = [
    { include = "mlops", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-quotes = "^3.3.2"
pytest = "^7.4.3"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
isort = "^5.13.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.3"
mkdocstrings = {extras = ["python"], version = "0.24.0"}
mkdocs-autorefs = "0.5.0"
griffe = "0.38.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
